[tool.poetry]
name = "pdf-image-tools"
version = "0.1.0"
description = ""
authors = ["JuliaJu <yulia.ovva@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.25.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
